// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering focuses the correct tab with keyboard navigation 1`] = `
<DocumentFragment>
  <div>
    <div
      data-reach-tabs=""
    >
      <div
        data-reach-tab-list=""
        role="tablist"
      >
        <button
          aria-controls="tabs--4--panel--0"
          aria-selected="false"
          class="tab-1"
          data-reach-tab=""
          id="tabs--4--tab--0"
          role="tab"
          tabindex="-1"
        >
          Tab One
        </button>
        <button
          aria-controls="tabs--4--panel--1"
          aria-selected="true"
          class="tab-2"
          data-reach-tab=""
          data-selected=""
          id="tabs--4--tab--1"
          role="tab"
          tabindex="0"
        >
          Tab Two
        </button>
        <button
          aria-controls="tabs--4--panel--2"
          aria-selected="false"
          class="tab-3"
          data-reach-tab=""
          id="tabs--4--tab--2"
          role="tab"
          tabindex="-1"
        >
          Tab Three
        </button>
      </div>
      <div
        data-reach-tab-panels=""
      >
        <div
          aria-labelledby="tabs--4--tab--0"
          data-reach-tab-panel=""
          hidden=""
          id="tabs--4--panel--0"
          role="tabpanel"
          tabindex="-1"
        >
          <h1>
            one!
          </h1>
          <button>
            yo
          </button>
        </div>
        <div
          aria-labelledby="tabs--4--tab--1"
          data-reach-tab-panel=""
          id="tabs--4--panel--1"
          role="tabpanel"
          tabindex="-1"
        >
          <h1>
            two!
          </h1>
        </div>
        <div
          aria-labelledby="tabs--4--tab--2"
          data-reach-tab-panel=""
          hidden=""
          id="tabs--4--panel--2"
          role="tabpanel"
          tabindex="-1"
        >
          <h1>
            three!
          </h1>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`rendering should match the snapshot 1`] = `
<DocumentFragment>
  <div>
    <div
      data-reach-tabs=""
    >
      <div
        data-reach-tab-list=""
        role="tablist"
      >
        <button
          aria-controls="tabs--1--panel--0"
          aria-selected="true"
          class="tab-1"
          data-reach-tab=""
          data-selected=""
          id="tabs--1--tab--0"
          role="tab"
          tabindex="0"
        >
          Tab One
        </button>
        <button
          aria-controls="tabs--1--panel--1"
          aria-selected="false"
          class="tab-2"
          data-reach-tab=""
          id="tabs--1--tab--1"
          role="tab"
          tabindex="-1"
        >
          Tab Two
        </button>
        <button
          aria-controls="tabs--1--panel--2"
          aria-selected="false"
          class="tab-3"
          data-reach-tab=""
          id="tabs--1--tab--2"
          role="tab"
          tabindex="-1"
        >
          Tab Three
        </button>
      </div>
      <div
        data-reach-tab-panels=""
      >
        <div
          aria-labelledby="tabs--1--tab--0"
          data-reach-tab-panel=""
          id="tabs--1--panel--0"
          role="tabpanel"
          tabindex="-1"
        >
          <h1>
            one!
          </h1>
          <button>
            yo
          </button>
        </div>
        <div
          aria-labelledby="tabs--1--tab--1"
          data-reach-tab-panel=""
          hidden=""
          id="tabs--1--panel--1"
          role="tabpanel"
          tabindex="-1"
        >
          <h1>
            two!
          </h1>
        </div>
        <div
          aria-labelledby="tabs--1--tab--2"
          data-reach-tab-panel=""
          hidden=""
          id="tabs--1--panel--2"
          role="tabpanel"
          tabindex="-1"
        >
          <h1>
            three!
          </h1>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
